deploy/base/nextjs-app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextjs-app
  namespace: k8sgateway
  labels:
    app.kubernetes.io/name: nextjs-app
    app.kubernetes.io/part-of: k8sgateway
spec:
  parentRefs:
    - name: main
      namespace: k8sgateway
  hostnames:
    - next.127.0.0.1.nip.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nextjs-app
          port: 3000
